--- a/.repo-meta.yml
+++ b/.repo-meta.yml
@@ -1,5 +1,5 @@
 ---
-$schemaver: 2.0
+$schemaver: '2.0'
 deployables:
   - name: byu_ws_sdk
     deploy_to_cmdb: true
@@ -7,53 +7,53 @@ deployables:
     aliases:
     short_description: A Python SDK for calling BYU REST web services.
     assignment_group: gro:AD-Student Life Applications
-    notes: 
+    notes:
     maintained_by:
       - pauldeden
       - ndpete
     developed_by_byu: true
     ddd:
-      business_domain: 
-      ubiquitous_language_url: 
-      context_map_url: 
+        business_domain:
+        ubiquitous_language_url:
+        context_map_url:
     links:
-      system_documentation_url: https://github.com/byu-oit-appdev/byu-ws-sdk-python
-      source_repo_url: https://github.com/test-ndpete-org/byu-ws-sdk-python
-      swagger_urls:
+        system_documentation_url: https://github.com/byu-oit-appdev/byu-ws-sdk-python
+        source_repo_url: https://github.com/test-ndpete-org/byu-ws-sdk-python
+        swagger_urls:
     microservice: false
     technologies_used:
       - Python
       - REST Web Services
       - OIT Custom Web Service Authentication
-    standard_change_template_id: 
+    standard_change_template_id:
     stages:
-      production:
-        urls:
-          product_page: https://pypi.python.org/pypi/byu_ws_sdk
-          physical_url: 
-          virtual_url: 
-        hosting_location: Other
-        aws_account: 
-        relationships:
-          depends_on:
-            db_read_write:
-            db_read_only:
-            software:
-          supports:
-            software:
-              - byu-ws-cli-python
-              - byu-ws-client-gui
-            service:
-          reverse_proxy: 
-          runs_on:
-            server_cluster:
-            virtual_server:
-            rack_server:
-            blade_server:
+        production:
+            urls:
+                product_page: https://pypi.python.org/pypi/byu_ws_sdk
+                physical_url:
+                virtual_url:
+            hosting_location: Other
+            aws_account:
+            relationships:
+                depends_on:
+                    db_read_write:
+                    db_read_only:
+                    software:
+                supports:
+                    software:
+                      - byu-ws-cli-python
+                      - byu-ws-client-gui
+                    service:
+                reverse_proxy:
+                runs_on:
+                    server_cluster:
+                    virtual_server:
+                    rack_server:
+                    blade_server:
     tags:
-      data-sensitivity: confidential
-      env: prd
-      team: AD-Student Life Applications
-      app: byu_ws_sdk
+        data-sensitivity: confidential
+        env: prd
+        team: AD-Student Life Applications
+        app: byu_ws_sdk
     federation_json_url: https://raw.githubusercontent.com/test-ndpete-org/byu-ws-sdk-python/master/.repo-meta.yml
 
